--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="claire.png" "alt= Claire profile picture"></td>
+      <td><img src="Claire.png" "alt= Claire profile picture"></td>
       <td>
         <h1> Claire Charlesworth</h1>
         <p> <em>Logistic Manager and <strong> Coding Student. </strong></em> </p>
